# it-cap

./: README.md  config.yml  diagram.puml  it-cap2b.py  pyproject.toml
.github/workflows/: checkmarx.yml  codeql-analysis.yml
it_cap/: report.py
src/: clients.py  containers.py  crawlers.py  entities.py  exceptions.py  handlers.py  managers.py  report.py  utils.py
