[tool.poetry]
name = "src"
version = "0.1.0"
description = "HF IT Capitalisation from Jira"
authors = ["Thomas Bryan <thomas.bryan@hellofresh.com>", "Omar Contreras <oc@hellofresh.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jira = "^3.4.1"
workalendar = "^16.3.0"
prettytable = "^3.2.0"
dependency-injector = {version = "^4.40.0", extras = ["yaml"]}
logstash_formatter = "^0.5.17"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
it-cap = "bin.report:run"
